# motis-agentic-quant-terminal

./: .gitignore  HANDOFF_2026-06-18.md  HANDOFF_FEATURE_VEGAS_ENGINE_FIX.md  Makefile  PRD_DETERMINISTIC_AGENTIC_QUANT_TERMINAL.md  README.md  pyproject.toml  workspace_manifest.json
.workbuddy/memory/: 2026-06-07.md  2026-06-11.md  2026-06-12.md  2026-06-13.md  2026-06-16.md  2026-06-17.md  2026-06-18.md
apps/web/src/: main.tsx  (+1 more)
artifacts/signal_engine/: README.md  engine_registry.json
ops/scripts/: start_dev_stack.sh  stop_dev_stack.sh
skills/stage1a-training-optimizer/: SKILL.md
tests/: test_agent_tasks.py  test_api.py  test_backtest_api.py  test_backtest_runner.py  test_db_schema.py  test_dev_stack_scripts.py  test_engine_strategy_contracts.py  test_execution_data_warmup.py  test_execution_lifecycle.py  test_execution_wake_runner.py  test_feature_enrichment.py  test_job_dispatch.py  test_legacy_signal_importer.py  test_market_data_api.py  test_market_data_reader.py  test_market_data_repository.py  test_okx_adapter.py  test_parquet_store.py  test_portfolio_backtest.py  test_raw_candle_fill.py  test_runtime_repository.py  test_sample_runtime_modules.py  test_signal_engine_runtime.py  test_signal_pool_extension.py  test_stage0_execution.py  test_stage0_universe.py  test_stage0_workspace.py  test_stage1_scoring.py  test_stage1_workspace.py  test_stage2_capture.py  test_stage3_grid.py  test_stage3_pyramid.py  test_stage4_realized_expectancy.py  test_strategy_contracts.py  test_vegas_ema_base_strategy.py  test_vegas_replay_provider_parity.py  test_walk_forward.py
(+164 files in other folders)
